--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@xe/xecd-rates-client": "^0.1.0",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
     "react": "^18.2.0",
