--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@testing-library/user-event": "^14.4.3",
     "@xe/xecd-rates-client": "^0.1.0",
     "aos": "^2.3.4",
-    "react-loader-spinner": "^5.3.4",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-id-swiper": "^4.0.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^5.0.0"
   }
 }
