--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aos": "^2.3.4",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
+    "node-schedule": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-id-swiper": "^4.0.0",
