--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-schedule": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
