--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "moment": "^2.29.4",
     "node-schedule": "^2.1.1",
     "postcss-nested": "^6.0.0",
+    "primereact": "^9.2.0",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-id-swiper": "^4.0.0",
